fix URL so that JarEntry urls come out correctly.
git-svn-id: https://svn.jboss.org/repos/jbossas/projects/microcontainer/trunk/container@57948 84be2c1e-ba19-0410-b317-a758671a6fc1